--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,15 +18,11 @@ jobs:
         with:
           token: "${{ github.token }}"
 
-      - name: Add glitcheroo git remote
-        run: |
-          git remote add glitcheroo ${GLITCH_GIT_URL}
-        env:
-          GLITCH_GIT_URL: ${{ secrets.GLITCH_GIT_URL }}
-        
       - name: Deploy project to Glitch
         run: |
           npx glitcheroo deploy
+        env:
+          GLITCHEROO_GIT_URL: ${{ secrets.GLITCHEROO_GIT_URL }}
 
       - name: Set ENVIRONMENT_URL environment variable
         run: |
