--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,9 +26,9 @@ jobs:
 
       - name: Set ENVIRONMENT_URL environment variable
         run: |
-          echo "::set-env name=ENVIRONMENT_URL::https://glitch.com/~$(basename "${GLITCH_GIT_URL}")"
+          echo "::set-env name=ENVIRONMENT_URL::https://glitch.com/~$(basename "${GLITCHEROO_GIT_URL}")"
         env:
-          GLITCH_GIT_URL: ${{ secrets.GLITCH_GIT_URL }}
+          GLITCHEROO_GIT_URL: ${{ secrets.GLITCHEROO_GIT_URL }}
         
       - name: Update deployment status (success)
         if: success()
